--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,9 @@
 
     <div class="collapse navbar-collapse" id="main-navbar">
       <ul class="nav navbar-nav navbar-left">
+        <li><%= link_to "Feed", feed_user_url(current_user) %>
         <li><%= link_to "New Photo", new_photo_url %></li>
+        <li><%= link_to "All Users", users_url %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if current_user %>
