UserPhotos collection and Photo model; override User model parse and toJSON; bootstrap current user id

--- a/app/views/root/root.html.erb
+++ b/app/views/root/root.html.erb
@@ -1,8 +1,10 @@
 <div id="content">
+  BACKBONE!
 </div>
 
 <script>
   $(document).ready(function(){
-    Silverprint.initialize();
+    console.log("root");
+    Silverprint.initialize(<%= current_user.id %>);
   });
 </script>
