--- a/app/assets/templates/users/show.jst.ejs
+++ b/app/assets/templates/users/show.jst.ejs
@@ -1,8 +1,10 @@
-<div class="pull-left">
-  <%= view.imageTag(user.get('profilePicUrl')) %>
-</div>
-<h1><%= user.get('username') %></h1>
+<div class="clearfix">
+  <div class="pull-left">
+    <%= view.imageTag(user.get('profilePicUrl')) %>
+  </div>
+  <h1><%= user.get('username') %></h1>
 
-<div id="photos">
+  <div id="photos">
   
+  </div>
 </div>
