--- a/app/assets/templates/photos/detail.jst.ejs
+++ b/app/assets/templates/photos/detail.jst.ejs
@@ -1,3 +1,4 @@
+<p></p>
 <div>
   <%= view.imageTag(user.get("profilePicUrl")) %>
   <%= view.linkTo(user.escape("username"), "#") %>
@@ -9,6 +10,13 @@
 <div>
   <% var getUsername = function (obj) { return obj.username } %>
   liked by: <%= photo.get("likers").map(getUsername).join(", ") %>
+</div>
+<div>
+  <% if (photo.isLikedBy(currentUser)) { %>
+    <button class="unlike" data-id="<%= photo.id %>">unlike</button>
+  <% } else { %>
+    <button class="like" data-id="<%= photo.id %>">like</button>
+  <% } %>
 </div>
 <div>
   <% if (photo.get("userId") == currentUser.id) { %>
