UserShow follow button works

--- a/app/assets/templates/photos/detail.jst.ejs
+++ b/app/assets/templates/photos/detail.jst.ejs
@@ -20,7 +20,7 @@
 </div>
 <div>
   <% if (photo.get("userId") == currentUser.id) { %>
-    <button class="delete" data-id="<%= photo.id %>">delete</button>
+    <button class="delete">delete</button>
   <% } %>
 </div>
 <p></p>
