--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
         <% if current_user %>
           <li><%= link_to "Feed", feed_user_url(current_user) %></li>
           <li><%= link_to "New Photo", new_photo_url %></li>
-          <li><%= link_to "All Users", users_url %></li>
+          <li><%= link_to "All Users", "#users" %></li>
           <li><%= link_to "<3", favorites_user_url(current_user) %></li>
         <% end %>
       </ul>
