add feed, refactor PhotoDetail to work for both PhotosFeed and UserShow views

--- a/app/assets/templates/photos/detail.jst.ejs
+++ b/app/assets/templates/photos/detail.jst.ejs
@@ -1,7 +1,7 @@
 <p></p>
 <div>
-  <%= view.imageTag(user.get("profilePicUrl")) %>
-  <%= view.linkTo(user.escape("username"), "#") %>
+  <%= view.imageTag(userAttrs.profilePicUrl) %>
+  <%= view.linkTo(userAttrs.username, "#users/" + userAttrs.id) %>
   <%= $.timeago(photo.get("createdAt")) %>
 </div>
 <div>
