--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,10 +21,10 @@
     <div class="collapse navbar-collapse" id="main-navbar">
       <ul class="nav navbar-nav navbar-left">
         <% if current_user %>
-          <li><%= link_to "Feed", feed_user_url(current_user) %></li>
+          <li><%= link_to "Feed", "#" %></li>
           <li><%= link_to "New Photo", new_photo_url %></li>
           <li><%= link_to "All Users", "#users" %></li>
-          <li><%= link_to "<3", favorites_user_url(current_user) %></li>
+          <li><%= link_to "<3", "#favorites" %></li>
         <% end %>
       </ul>
       <ul class="nav navbar-nav navbar-right">
