--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
       <ul class="nav navbar-nav navbar-left">
         <% if current_user %>
           <li><%= link_to "Feed", "#" %></li>
-          <li><%= link_to "New Photo", new_photo_url %></li>
+          <li><%= link_to "New Photo", "#new" %></li>
           <li><%= link_to "All Users", "#users" %></li>
           <li><%= link_to "<3", "#favorites" %></li>
         <% end %>
