adjust photo sizes; bug fixes

--- a/app/assets/templates/users/show.jst.ejs
+++ b/app/assets/templates/users/show.jst.ejs
@@ -1,6 +1,6 @@
 <div class="clearfix">
   <div class="pull-left">
-    <%= view.imageTag(user.get('profilePicUrl')) %>
+    <%= view.imageTag(user.get('profilePicShowUrl')) %>
   </div>
   <h1><%= user.get('username') %></h1>
   
@@ -21,8 +21,7 @@
     <div id="profile-pic">
     </div>  
   <% } %>
-  
+</div>
 
-  <div id="photos">
-  </div>
+<div id="photos">
 </div>
