UserShow page grid toggle

--- a/app/assets/templates/users/show.jst.ejs
+++ b/app/assets/templates/users/show.jst.ejs
@@ -23,5 +23,9 @@
   <% } %>
 </div>
 
+<button id="grid">
+  <%= view.mode === "vertical" ? "grid" : "vertical" %>
+</button>
+
 <div id="photos">
 </div>
