--- a/app/assets/templates/users/feed.jst.ejs
+++ b/app/assets/templates/users/feed.jst.ejs
@@ -1,4 +1,8 @@
 <h1>feed</h1>
 
+<button id="grid">
+  <%= view.mode === "vertical" ? "grid" : "vertical" %>
+</button>
+
 <div id="photos">
 </div>
