--- a/app/views/users/feed.html.erb
+++ b/app/views/users/feed.html.erb
@@ -7,7 +7,7 @@
       <%= link_to photo.user.username, user_url(photo.user) %>
       <%= time_ago_in_words(photo.created_at) %> ago
     </div>
-    <%= image_tag photo.photo.url(:normal) %>
+    <%= image_tag photo.photo.url(:vertical) %>
     <div>
       liked by: <%= photo.likers.map(&:username).join(", ") %>
     </div>
