photo upload preview

--- a/app/assets/templates/photos/form.jst.ejs
+++ b/app/assets/templates/photos/form.jst.ejs
@@ -1,3 +1,8 @@
-  <label for="photo_photo">add a photo</label>
+<label for="photo_photo">add a photo</label>
+<div>
   <input type="file" id="photo_photo" name="photo[photo]" accept="image/*">
   <input type="submit" value="add">
+</div>
+<div class="photo">
+  <img id="preview" src="#" alt="preview">
+</div>
