profile pic upload preview

--- a/app/assets/templates/photos/profile.jst.ejs
+++ b/app/assets/templates/photos/profile.jst.ejs
@@ -1,3 +1,8 @@
-<input type="file" id="user_profile_pic"
-  name="user[profile_pic]" accept="image/*">
-<input type="submit" value="change">
+<div>
+  <input type="file" id="user_profile_pic"
+    name="user[profile_pic]" accept="image/*">
+  <input type="submit" value="change">
+</div>
+<div class="photo">
+  <img id="preview" src="#">
+</div>
