--- a/app/assets/templates/photos/form.jst.ejs
+++ b/app/assets/templates/photos/form.jst.ejs
@@ -4,5 +4,5 @@
   <input type="submit" value="add">
 </div>
 <div class="photo">
-  <img id="preview" src="#" alt="preview">
+  <img id="preview" src="#">
 </div>
