Jcrop; photo cropping

--- a/app/assets/templates/photos/form.jst.ejs
+++ b/app/assets/templates/photos/form.jst.ejs
@@ -6,3 +6,13 @@
 <div class="photo">
   <img id="preview" src="#">
 </div>
+<div>
+  x
+  <input type="text" id="x" name="photo[x]" value="">
+  y
+  <input type="text" id="y" name="photo[y]" value="">
+  w
+  <input type="text" id="width" name="photo[width]" value="">
+  h
+  <input type="text" id="height" name="photo[height]" value="">
+</div>
