--- a/app/assets/templates/users/show.jst.ejs
+++ b/app/assets/templates/users/show.jst.ejs
@@ -23,8 +23,12 @@
   </div>  
 <% } %>
 
-<button id="grid">
-  <%= view.mode === "vertical" ? "grid" : "vertical" %>
+<button id="grid" class="btn btn-default">
+  <% if (view.mode === "vertical") { %>
+    <span class="glyphicon glyphicon-th-large"></span>
+  <% } else { %>
+    <span class="glyphicon glyphicon-align-justify"></span>
+  <% } %>
 </button>
 
 <div id="photos">
