bug fixes; style buttons

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,7 +23,13 @@ img {
   color: red;
 }
 
-.photo {
+.grid-photo {
   padding: 5px;
   margin: auto;
 }
+
+.photo-container {
+  padding: 5px;
+  margin: auto;
+}
+
