--- a/app/assets/templates/photos/grid_detail.jst.ejs
+++ b/app/assets/templates/photos/grid_detail.jst.ejs
@@ -1,3 +1,3 @@
-<div class="photo" data-id="<%= photo.id %>">
+<div class="grid-photo" data-id="<%= photo.id %>">
   <%= view.imageTag(photo.get("photoGridUrl")) %>
 </div>
