--- a/app/assets/templates/photos/detail.jst.ejs
+++ b/app/assets/templates/photos/detail.jst.ejs
@@ -1,11 +1,11 @@
 <p></p>
-<div class="photo">
+<div class="photo-detail">
   <div>
     <%= view.imageTag(userAttrs.profilePicUrl, { className: "img-circle" }) %>
     <%= view.linkTo(userAttrs.username, "#users/" + userAttrs.id) %>
     <%= $.timeago(photo.get("createdAt")) %>
   </div>
-  <div data-id="<%= photo.id %>">
+  <div class="vertical-photo" data-id="<%= photo.id %>">
     <%= view.imageTag(photo.get("photoUrl")) %>
   </div>
   <div>
@@ -22,7 +22,7 @@
   <div>
     <% if (photo.isLikedBy(currentUser)) { %>
       <button class="unlike btn btn-default" data-id="<%= photo.id %>">
-        <span class="glyphicon glyphicon-heart red-heart"></span>
+        <span class="glyphicon glyphicon-heart glyphicon-red"></span>
       </button>
     <% } else { %>
       <button class="like btn btn-default" data-id="<%= photo.id %>">
