--- a/app/assets/templates/photos/form.jst.ejs
+++ b/app/assets/templates/photos/form.jst.ejs
@@ -1,18 +1,13 @@
-<label for="photo_photo">add a photo</label>
 <div>
   <input type="file" id="photo_photo" name="photo[photo]" accept="image/*">
-  <input type="submit" value="add">
+  <button type="submit" class="btn btn-default">add</button>
 </div>
 <div class="photo">
   <img id="preview" src="#">
 </div>
 <div>
-  x
-  <input type="text" id="x" name="photo[x]" value="">
-  y
-  <input type="text" id="y" name="photo[y]" value="">
-  w
-  <input type="text" id="width" name="photo[width]" value="">
-  h
-  <input type="text" id="height" name="photo[height]" value="">
+  <input type="hidden" id="x" name="photo[x]" value="">
+  <input type="hidden" id="y" name="photo[y]" value="">
+  <input type="hidden" id="width" name="photo[width]" value="">
+  <input type="hidden" id="height" name="photo[height]" value="">
 </div>
