--- a/app/assets/templates/users/feed.jst.ejs
+++ b/app/assets/templates/users/feed.jst.ejs
@@ -1,11 +1,12 @@
-<h1>feed</h1>
-
 <button id="grid" class="btn btn-default">
   <% if (view.mode === "vertical") { %>
     <span class="glyphicon glyphicon-th-large"></span>
   <% } else { %>
     <span class="glyphicon glyphicon-align-justify"></span>
   <% } %>
+</button>
+<button id="refresh" class="btn btn-default">
+  <span class="glyphicon glyphicon-refresh"></span>
 </button>
 
 <div id="photos">
