bug fixes; button groups; removed grayscale filter

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,6 +20,7 @@ img {
 }
 
 body {
+  color: #ddd;
   background-color: #222;
 }
 
@@ -28,7 +29,7 @@ body {
 }
 
 .grid-photo {
-  padding: 5px;
+  padding: 10px;
   margin: auto;
 }
 
@@ -37,7 +38,7 @@ body {
 }
 
 .photo-container {
-  padding: 5px;
+  padding: 10px;
   margin: auto;
 }
 
