--- a/app/assets/templates/users/feed.jst.ejs
+++ b/app/assets/templates/users/feed.jst.ejs
@@ -1,13 +1,16 @@
-<button id="grid" class="btn btn-default">
-  <% if (view.mode === "vertical") { %>
+<div class="btn-group" data-toggle="buttons">
+  <label id="grid" class="btn btn-default">
+    <input type="radio">
     <span class="glyphicon glyphicon-th-large"></span>
-  <% } else { %>
+  </label>
+  <label id="vertical" class="btn btn-default">
+    <input type="radio">
     <span class="glyphicon glyphicon-align-justify"></span>
-  <% } %>
-</button>
-<button id="refresh" class="btn btn-default">
-  <span class="glyphicon glyphicon-refresh"></span>
-</button>
+  </label>
+  <label id="refresh" class="btn btn-default">
+    <span class="glyphicon glyphicon-refresh"></span>
+  </label>
+</div>
 
 <div id="photos">
 </div>
