--- a/app/assets/templates/users/row.jst.ejs
+++ b/app/assets/templates/users/row.jst.ejs
@@ -2,8 +2,8 @@
   <%= view.imageTag(user.get('profilePicUrl')) %>
   <%= view.linkTo(user.get('username'), "#users/" + user.id) %>
   <% if (user.isFollowedBy(Silverprint.currentUser)) { %>
-    <button class="unfollow btn btn-default">unfollow</button>
+    <button class="unfollow btn btn-default btn-sm">unfollow</button>
   <% } else if (user.id != Silverprint.currentUser.id) { %>
-    <button class="follow btn btn-default">follow</button>
+    <button class="follow btn btn-default btn-sm">follow</button>
   <% } %>
 </td>
