--- a/app/assets/templates/photos/grid_detail.jst.ejs
+++ b/app/assets/templates/photos/grid_detail.jst.ejs
@@ -1,3 +1,3 @@
 <div class="grid-photo" data-id="<%= photo.id %>">
-  <%= view.imageTag(photo.get("photoGridUrl")) %>
+  <%= view.imageTag(photo.get("photoGridUrl"), { className: "thumbnail" }) %>
 </div>
