--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,6 +9,6 @@
   <%= f.password_field :password %>
   <br>
   
-  <%= f.submit "Sign up" %>
+  <%= f.submit "Sign up", :class => "btn btn-default" %>
   
 <% end %>
