--- a/app/assets/templates/users/favorites.jst.ejs
+++ b/app/assets/templates/users/favorites.jst.ejs
@@ -1,9 +1,9 @@
 <div class="btn-group" data-toggle="buttons">
-  <label id="grid" class="btn btn-default">
+  <label id="grid" class="btn btn-link">
     <input type="radio">
     <span class="glyphicon glyphicon-th-large"></span>
   </label>
-  <label id="vertical" class="btn btn-default">
+  <label id="vertical" class="btn btn-link">
     <input type="radio">
     <span class="glyphicon glyphicon-align-justify"></span>
   </label>
