--- a/app/assets/templates/users/show.jst.ejs
+++ b/app/assets/templates/users/show.jst.ejs
@@ -25,11 +25,11 @@
 <% } %>
 
 <div class="btn-group" data-toggle="buttons">
-  <label class="btn btn-default" id="grid">
+  <label class="btn btn-link" id="grid">
     <input type="radio">
     <span class="glyphicon glyphicon-th-large"></span>
   </label>
-  <label class="btn btn-default" id="vertical">
+  <label class="btn btn-link" id="vertical">
     <input type="radio">
     <span class="glyphicon glyphicon-align-justify"></span>
   </label>
