--- a/app/assets/templates/users/feed.jst.ejs
+++ b/app/assets/templates/users/feed.jst.ejs
@@ -1,15 +1,17 @@
-<div class="btn-group" data-toggle="buttons">
-  <label id="grid" class="btn btn-default">
-    <input type="radio">
-    <span class="glyphicon glyphicon-th-large"></span>
-  </label>
-  <label id="vertical" class="btn btn-default">
-    <input type="radio">
-    <span class="glyphicon glyphicon-align-justify"></span>
-  </label>
-  <label id="refresh" class="btn btn-default">
-    <span class="glyphicon glyphicon-refresh"></span>
-  </label>
+<div class="row">
+  <div class="btn-group col-xs-3 col-xs-offset-1" data-toggle="buttons">
+    <label id="grid" class="btn btn-link">
+      <input type="radio">
+      <span class="glyphicon glyphicon-th-large"></span>
+    </label>
+    <label id="vertical" class="btn btn-link">
+      <input type="radio">
+      <span class="glyphicon glyphicon-align-justify"></span>
+    </label>
+    <label id="refresh" class="btn btn-link">
+      <span class="glyphicon glyphicon-refresh"></span>
+    </label>
+  </div>
 </div>
 
 <div id="photos">
