--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,9 @@
           <li><a href="#favorites">
             <span class="glyphicon glyphicon-heart"></span>
           </a></li>
+          <li><a id="fullscreen">
+            <span class="glyphicon glyphicon-fullscreen"></span>
+          </a></li>
         <% end %>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -42,7 +45,12 @@
                         "#users/#{current_user.id}",
                         :class => "username") %>
           </li>
-          <li><%= link_to "Log out", session_url, :method => :delete %></li>
+          <li><%= link_to(
+                        raw(
+                          "<span class=\"glyphicon glyphicon-log-out\"></span>"
+                        ),
+                        session_url,
+                        :method => :delete) %></li>
         <% else %>
           <li><%= link_to "Log in", new_session_url %></li>
           <li><%= link_to "Sign up", new_user_url %></li>
