profile photo glyphicon & toggle

--- a/app/assets/templates/photos/profile.jst.ejs
+++ b/app/assets/templates/photos/profile.jst.ejs
@@ -1,7 +1,7 @@
 <div>
   <input type="file" id="user_profile_pic"
     name="user[profile_pic]" accept="image/*">
-  <input type="submit" value="change">
+  <button type="submit" class="btn btn-default btn-xs">change</button>
 </div>
 <div class="photo">
   <img id="preview" src="#">
