--- a/app/assets/templates/photos/form.jst.ejs
+++ b/app/assets/templates/photos/form.jst.ejs
@@ -1,6 +1,6 @@
 <div>
   <input type="file" id="photo_photo" name="photo[photo]" accept="image/*">
-  <button type="submit" class="btn btn-default">add</button>
+  <button type="submit" class="btn btn-default btn-sm">add</button>
 </div>
 <div class="photo">
   <img id="preview" src="#">
