--- a/app/assets/templates/users/show.jst.ejs
+++ b/app/assets/templates/users/show.jst.ejs
@@ -1,41 +1,41 @@
-<div class="clearfix">
-  <div class="pull-left">
-    <%= view.imageTag(user.get('profilePicShowUrl'),
-                      { className: "img-circle" }) %>
-  </div>
-  <h1><%= user.get('username') %></h1>
+<div class="row">
+  <div class="col-xs-offset-1">
+    <div class="clearfix">
+      <div class="pull-left">
+        <%= view.imageTag(user.get('profilePicShowUrl'),
+                          { className: "img-circle" }) %>
+      </div>
+      <h1><%= user.get('username') %></h1>
   
-  <div id="follow">
-    <% if (user.isFollowedBy(currentUser)) { %>
-      <button class="unfollow btn btn-default btn-sm">unfollow</button>
-    <% } else if (user.id != currentUser.id) { %>
-      <button class="follow btn btn-default btn-sm">follow</button>
-    <% } %>
-  </div>
-</div>
+      <div id="follow">
+        <% if (user.isFollowedBy(currentUser)) { %>
+          <button class="unfollow btn btn-default btn-xs">unfollow</button>
+        <% } else if (user.id != currentUser.id) { %>
+          <button class="follow btn btn-default btn-xs">follow</button>
+        <% } %>
+      </div>
+    </div>
   
-<% if (user.id == currentUser.id) { %>
-  <%= view.linkTo(
-            "change profile photo",
-            "#",
-            { id: "change-profile-pic" }) %>
-            
-  <div id="profile-pic">
-  </div>  
-<% } %>
+    <div id="profile-pic" class="photo-container">
+    </div>
 
-<div class="btn-group">
-  <button class="btn btn-link" id="grid">
-    <span class="glyphicon glyphicon-th-large"></span>
-  </button>
-  <button class="btn btn-link" id="vertical">
-    <span class="glyphicon glyphicon-align-justify"></span>
-  </button>
-  <% if (user.id == currentUser.id) { %>
-    <button class="btn btn-link" id="sort">
-      <span class="glyphicon glyphicon-move"></span>
-    </button>
-  <% } %>
+    <div class="btn-group">
+      <button class="btn btn-link" id="grid">
+        <span class="glyphicon glyphicon-th-large"></span>
+      </button>
+      <button class="btn btn-link" id="vertical">
+        <span class="glyphicon glyphicon-align-justify"></span>
+      </button>
+      <% if (user.id == currentUser.id) { %>
+        <button class="btn btn-link" id="sort">
+          <span class="glyphicon glyphicon-move"></span>
+        </button>
+        <button class="btn btn-link" id="change-profile-pic">
+          <span class="glyphicon glyphicon-picture"></span>
+        </button>
+      <% } %>
+    </div>
+  </div>
 </div>
 
 <div id="photos">
