--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -68,6 +68,15 @@ i.active {
   margin-bottom: 40px;
 }
 
+.profile-pic {
+  width: 200px;
+  height: 200px;
+}
+
+.profile-pic-thumb {
+  width: 50px;
+  height: 50px;
+}
 .thumbnail {
   background-color: #333;
   border: none;
