--- a/app/assets/templates/photos/detail.jst.ejs
+++ b/app/assets/templates/photos/detail.jst.ejs
@@ -2,7 +2,14 @@
 <div class="row">
   <div class="photo-detail col-xs-6 col-xs-offset-1">
     <div class="photo-container">
-      <%= view.imageTag(userAttrs.profilePicUrl, { className: "img-circle" }) %>
+      <% if (userAttrs.profilePicUrl ==
+              "/profile_pics/thumbnail/missing.png") { %>
+        <%= view.imageTag("http://www.placekitten.com/240/240",
+                          { className: "img-circle profile-pic-thumb" }) %>
+      <% } else { %>
+        <%= view.imageTag(userAttrs.profilePicUrl,
+                          { className: "img-circle profile-pic-thumb" }) %>
+      <% } %>
       <%= view.linkTo(userAttrs.username, "#users/" + userAttrs.id) %>
       <%= $.timeago(photo.get("createdAt")) %>
     </div>
