--- a/app/assets/templates/users/show.jst.ejs
+++ b/app/assets/templates/users/show.jst.ejs
@@ -1,9 +1,15 @@
 <div class="row">
-  <div class="col-xs-offset-1">
+  <div class="col-xs-6 col-xs-offset-1">
     <div class="clearfix">
-      <div class="pull-left">
-        <%= view.imageTag(user.get('profilePicShowUrl'),
-                          { className: "img-circle" }) %>
+      <div class="pull-left photo-container">
+        <% if (user.get('profilePicShowUrl') ==
+                "/profile_pics/show/missing.png") { %>
+          <%= view.imageTag("http://www.placekitten.com/240/240",
+                            { className: "img-circle profile-pic" }) %>
+        <% } else { %>
+          <%= view.imageTag(user.get("profilePicShowUrl"),
+                            { className: "img-circle profile-pic" }) %>
+        <% } %>
       </div>
       <h1><%= user.get('username') %></h1>
   
@@ -14,6 +20,11 @@
           <button class="follow btn btn-default btn-xs">follow</button>
         <% } %>
       </div>
+      <div class="col-xs-offset-7">
+      <h4><%= user.get("photos").length %> posts</h4>
+      <h4><%= user.get("followers").length %> followers</h4>
+      <h4><%= user.get("following").length %> following</h4>
+    </div>
     </div>
   
     <div id="profile-pic" class="photo-container">
